<resources>
    <string name="app_name">Arriva Vozni Red</string>
    <string name="input_departure">Vstopna Postaja</string>
    <string name="input_arrival">Izstopna Postaja</string>
    <string name="button_swap">Zamenjaj Postaji</string>
    <string name="button_send">Išči Vozni Red</string>
    <string name="action_favourites">Priljubljene povezave</string>
    <string name="favourite_button_add_description">Dodaj med priljubljene</string>
    <string name="favourite_button_remove_description">Odstrani od priljubljenih</string>
    <string name="keep_last_input">Shrani zadnje uporabljene postaje</string>
    <string name="dont_show_past_buses">Skrij pretekle avtobusne termine</string>
    <string name="choose_favourite">"Izberi priljubljeno povezavo"</string>
    <string name="loading_message">"Iščem rezultate…"</string>
    <string name="stations_not_found_error">"Vpisane postaje ne obstajajo.\nPreverite imena postaj in poskusite ponovno."</string>
    <string name="settings_title">"Nastavitve</string>
    <string name="erase_input_on_click">Pobriši vnosna polja pred vnosom.</string>
</resources>