<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_departure_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5pt">

        <AutoCompleteTextView
            android:id="@+id/input_departure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5pt"
            android:layout_weight="1"
            android:hint="@string/input_departure"
            android:imeOptions="actionNext"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_arrival_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/input_arrival"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5pt"
            android:layout_weight="1"
            android:hint="@string/input_arrival"
            android:imeOptions="actionDone"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <CalendarView
        android:id="@+id/input_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5pt" />

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_swap"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5pt"
            android:layout_weight="1"
            android:text="@string/button_swap" />

        <Button
            android:id="@+id/button_send"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5pt"
            android:layout_weight="1"
            android:text="@string/button_send" />
    </LinearLayout>

</LinearLayout>