<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar_settings_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppThemeNoActionBar.BarTheme" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/dont_show_past_buses_switch"
        style="@style/Widget.MaterialComponents.CompoundButton.Switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10pt"
        android:paddingRight="10pt"
        android:text="@string/dont_show_past_buses" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/save_list_input_switch"
        style="@style/Widget.MaterialComponents.CompoundButton.Switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10pt"
        android:paddingRight="10pt"
        android:text="@string/keep_last_input" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/erase_input_on_click_switch"
        style="@style/Widget.MaterialComponents.CompoundButton.Switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10pt"
        android:paddingRight="10pt"
        android:text="@string/erase_input_on_click" />
</LinearLayout>